added documentation for new endpoints
